# wikinota

./: .gitignore  README.md
.github/workflows/: rust.yml
wikinota_backend/: Cargo.toml  demo.sqlite3
wikinota_backend/dbs/: directoryHotFix.md
wikinota_backend/src/: auth.rs  main.rs  reqHandlers.rs  req_handlers.rs
wikinota_frontend/: index.html
wikinota_frontend/css/: main.css
wikinota_frontend/js/: chatInput.js  helpers.js  masterLogic.js  pubSub.js  start.js  ui_sugar.js
