[package]
name = "wikinota_backend"
version = "0.0.1"
authors = ["i5heu <i5h@i5h.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
rusqlite = "0.23.1"
r2d2_sqlite = "0.16.0" 
r2d2 = "0.8.9"
rustc-serialize = "0.3.24"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-form-data = "0.4.0"
serde_derive = "1.0.114"

[dependencies.gerasdb]
path = "../../GerasDB"