[package]
name = "wikinota_backend"
version = "0.0.3-dev"
authors = ["i5heu <i5h@i5h.eu>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gerasdb = "0.0.7-dev"
actix-web = { version = "3.0.2", features = ["openssl"] }
actix-rt = "1.1.1"
libsqlite3-sys = "0.20.0"
rusqlite = "0.24.0"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
rustc-serialize = "0.3.24"
rust-crypto = "0.2.36"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
actix-form-data = "0.5.0"
serde_derive = "1.0.116"
openssl = "0.10.30"
mime = "0.3.16"
